# NomadECS

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: clang-cxx-dev-tools.cmake
example/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
src/: CMakeLists.txt  component.cpp  component.h  componentHandle.h  componentManager.cpp  componentManager.h  componentMask.cpp  componentMask.h  demo.cpp  demo.h  entity.cpp  entity.h  entityHandle.h  entityManager.cpp  entityManager.h  entityMap.h  nomad.h  system.cpp  system.h  world.cpp  world.h
